@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) core: Stop the HTTP_IN filter from attempting to write error buckets
+     to the output filters, which is bogus in the proxy case. Create a
+     clean mapping from APR codes to HTTP status codes, and use it where
+     needed. [Graham Leggett]
+
   *) mod_proxy: Ensure we don't attempt to amend a table we are iterating
      through, ensuring that all headers listed by Connection are removed.
      [Graham Leggett, Co-Advisor <coad measurement-factory.com>]
